--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -3,7 +3,7 @@
        
             <div id="site-name">
                 <a href="/" style="text-decoration: none;">
-                    <h4>Node-Express</h4>
+                    <h4>SocialArray</h4>
                 </a>
             </div>
         
