--- a/views/user_sign_up.ejs
+++ b/views/user_sign_up.ejs
@@ -4,10 +4,9 @@
 <div class="box-form">
     <div class="left">
         <div class="overlay">
-        <h1>Node :)
-            Expresss</h1>
+        <h1>Hello World.</h1>
         <p>
-            Welcome to Node-Express a place to connect with people around the world. SignUp to become part of our community.
+            Welcome to SocialArray a place to connect with people around the world. SignUp to become part of our community.
         </p>
         <span>
             <p>SignUp with Google and make your experience faster</p>
@@ -21,7 +20,7 @@
     <form action="/users/create" method="POST">
 
         <div class="right">
-            <h5>Sign Up</h5>
+            <h5>Login</h5>
             <p>Already have an Account <a href="/users/sign-in">Go to Login</a></p>
             <div class="inputs">
                 <input type="text" name="name" placeholder="Your Name" required>
