--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -3,11 +3,7 @@
 }
 
 body {
-  //background-color: #eeeeee;
-     background-color: #555555;
-background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 1600 900'%3E%3Cdefs%3E%3ClinearGradient id='a' x1='0' x2='0' y1='1' y2='0' gradientTransform='rotate(15,0.5,0.5)'%3E%3Cstop offset='0' stop-color='%230FF'/%3E%3Cstop offset='1' stop-color='%23CF6'/%3E%3C/linearGradient%3E%3ClinearGradient id='b' x1='0' x2='0' y1='0' y2='1' gradientTransform='rotate(5,0.5,0.5)'%3E%3Cstop offset='0' stop-color='%23F00'/%3E%3Cstop offset='1' stop-color='%23FC0'/%3E%3C/linearGradient%3E%3C/defs%3E%3Cg fill='%23FFF' fill-opacity='0' stroke-miterlimit='10'%3E%3Cg stroke='url(%23a)' stroke-width='2'%3E%3Cpath transform='translate(-51.1 -29.2) rotate(-29.2 1409 581) scale(0.781)' d='M1409 581 1450.35 511 1490 581z'/%3E%3Ccircle stroke-width='4' transform='translate(-182.5 73) rotate(-14.6 800 450) scale(0.964)' cx='500' cy='100' r='40'/%3E%3Cpath transform='translate(-51.1 109.5) rotate(-182.5 401 736) scale(0.964)' d='M400.86 735.5h-83.73c0-23.12 18.74-41.87 41.87-41.87S400.86 712.38 400.86 735.5z'/%3E%3C/g%3E%3Cg stroke='url(%23b)' stroke-width='4'%3E%3Cpath transform='translate(438 43.8) rotate(-10.95 150 345) scale(1.073)' d='M149.8 345.2 118.4 389.8 149.8 434.4 181.2 389.8z'/%3E%3Crect stroke-width='8' transform='translate(109.5 -219) rotate(-262.8 1089 759)' x='1039' y='709' width='100' height='100'/%3E%3Cpath transform='translate(-29.2 -29.2) rotate(-43.8 1400 132) scale(0.635)' d='M1426.8 132.4 1405.7 168.8 1363.7 168.8 1342.7 132.4 1363.7 96 1405.7 96z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
-background-attachment: fixed;
-background-size: cover; 
+  background-color: #eeeeee;
 }
 
 #home-flex {
@@ -179,10 +175,7 @@ background-size: cover;
   #sign {
     text-align: center;
     height: 500px;
-    background-color: #BBBBBB;
-background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 1600 900'%3E%3Cpolygon fill='%23cc0000' points='957 450 539 900 1396 900'/%3E%3Cpolygon fill='%23aa0000' points='957 450 872.9 900 1396 900'/%3E%3Cpolygon fill='%23c6004c' points='-60 900 398 662 816 900'/%3E%3Cpolygon fill='%23a4003d' points='337 900 398 662 816 900'/%3E%3Cpolygon fill='%23bf006c' points='1203 546 1552 900 876 900'/%3E%3Cpolygon fill='%239d0056' points='1203 546 1552 900 1162 900'/%3E%3Cpolygon fill='%23b80084' points='641 695 886 900 367 900'/%3E%3Cpolygon fill='%23970069' points='587 900 641 695 886 900'/%3E%3Cpolygon fill='%23b10098' points='1710 900 1401 632 1096 900'/%3E%3Cpolygon fill='%238f007a' points='1710 900 1401 632 1365 900'/%3E%3Cpolygon fill='%23aa00aa' points='1210 900 971 687 725 900'/%3E%3Cpolygon fill='%23880088' points='943 900 1210 900 971 687'/%3E%3C/svg%3E");
-background-attachment: fixed;
-background-size: cover;
+    background-image: url("../images/back-1.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     padding: 20px 0px;
